Fixed stylings (i.e. should display correctly on Firefox again)

--- a/src/app/game.component.css
+++ b/src/app/game.component.css
@@ -1,6 +1,4 @@
 .gameBoard {
-    max-width: calc(80px * 7);
-    max-height: calc(80px * 6);
     background-color: #D1D136; /* Yellow */
     border-radius: 0%;
     border: 1px solid black;
